# CSPBench

./: .coverage  .dockerignore  .env.example  .gcloudignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DOCKER_CONFIG.md  DOCKER_CONFIG_EN.md  Dockerfile  FINAL_IMPLEMENTATION_STATUS.md  LICENSE  Makefile  PARALLELIZATION_IMPLEMENTATION.md  README.md  REESTRUTURACAO.md  REFACTOR_SUMMARY.md  RELATORIO_TESTES.md  TECHNICAL_DOCUMENTATION.md  baseline.py  blf_ga.py  codecov.yml  config.py  dataset_entrez.py  dataset_file.py  dataset_synthetic.py  dataset_utils.py  debug_websocket.py  docker-compose.dev.yml  docker-compose.yml  exemplo_t10_resource_monitor.py  exemplo_t11_formatacao.py  exemplo_t9_paralelo.py  main.py  main_old.py  paper.bib  (+22 more)
.cloudcode/: cloud-run-config.yaml  cloud-run-deploy.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: algorithm_proposal.md  bug_report.md  feature_request.md
.github/instructions/: base.instructions.md
.github/workflows/: ci.yml
algorithms/: README.md  __init__.py  base.py
algorithms/baseline/: README.md  TECHNICAL_DOCUMENTATION.md  __init__.py  algorithm.py  config.py  implementation.py
algorithms/blf_ga/: ALGORITHM_DOCUMENTATION.md  DOCUMENTATION.md  README.md  TECHNICAL_DOCUMENTATION.md  __init__.py  algorithm.py  config.py  implementation.py
algorithms/csc/: README.md  TECHNICAL_DOCUMENTATION.md  __init__.py  algorithm.py  config.py  implementation.py
algorithms/dp_csp/: README.md  TECHNICAL_DOCUMENTATION.md  __init__.py  algorithm.py  config.py  implementation.py
algorithms/h2_csp/: README.md  __init__.py  algorithm.py  config.py
algorithms/h3_csp/: README.md  TECHNICAL_DOCUMENTATION.md  __init__.py  algorithm.py  config.py  implementation.py
automated_runs/: run_blfga.py  run_blfga_parallel.py  run_main_grid.py
automated_runs/configs/: blfga_grid.yaml  dataset.yaml
backup/: cloud.backup.yaml  global_manager.py  hierarchical_simple_monitor.py  sqlite_repository.py
backup/.cloudcode/: cloudrun.json
backup/deploy/: README.md  app.yaml  cloudbuild.yaml  skaffold.yaml
batch_configs/: batch 1.yaml  batch_1.xml  completo.yaml  curses.yaml  exemplo.yaml  exemplo_batch.yaml  lote.yaml  otimizacao_GA.yaml  otimizacao_completa.yaml  otimizacao_exemplo.yaml  otimizacao_teste_rapido.yaml  processamento_exemplo.yaml  processamento_unificado.yaml  sensibilidade_exemplo.yaml  sensibilidade_teste_rapido.yaml  simples.yaml  teste.yaml  validacao.yaml
batches/: TEMPLATE.yaml  TEMPLATE_PADRONIZADO.yaml  otimizacao_padrao.yaml  processamento_padrao.yaml  sensibilidade_padrao.yaml
benchmark/: README.md  __init__.py  benchmark_parallel.py
config/: settings.yaml
csp_blfga/: __init__.py  main.py
csp_blfga/utils/: distance.py  logging.py  logging_utils.py  resource_limits_config.py  resource_monitor.py
data/: work_manager.db  work_manager.db-shm  work_manager.db-wal
datasets/: __init__.py  dataset_entrez.py  dataset_file.py  dataset_synthetic.py  dataset_utils.py  synthetic_n10_L20_noise0.1_ACTG.fasta  synthetic_n20_L50_noise0.1_01.fasta  synthetic_n20_L50_noise0.1_ACTG.fasta  synthetic_n30_L100_noise0.1_ACTG.fasta
deploy/: .env.deploy  .env.deploy.example  app.yaml  cloud_run_deploy.sh  cloudbuild.yaml  docker-compose.yml  prepare_bucket.sh
deploy/k8s/: cloudrun-service.yaml
docs/: BATCH_SYSTEM_UNIFIED.md  CLOUD_DEPLOYMENT_STATUS.md  CONFIG_REORGANIZATION.md  CONTRIBUTING.md  DEPLOY_GOOGLE_CLOUD.md  DEVELOPER_GUIDE.md  DOCKERFILE_CLEANUP.md  FACTORY_METHODS_BEST_PRACTICES.md  IMPLEMENTATION_SUMMARY.md  PERSISTENCE_HIERARCHY_IMPLEMENTATION.md  QUICKSTART_CLOUD.md  README.md  RESULTS_INTERFACE.md  WEB_REFACTORING.md
docs/api/: algorithms.html  index.html  search.js  src.html
examples/batches/: TEMPLATE.yaml  experiment_example.yaml  optimizationt_example.yaml  sensitivityt_example.yaml
examples/datasets/: example.fasta
notebooks/: otimizacao_blfga.ipynb
paper/: paper.md
paper/jats/: paper.jats
reports/: Test Batch_20250704_203042.json  Test Batch_20250704_203154.json  Test Batch_20250704_203210.json  Test Batch_20250704_203451.json  Test Batch_20250704_203733.json  Test Batch_20250704_203832.json  Test Batch_20250704_204832.json  Test Batch_20250704_205332.json  Test Batch_20250704_210056.json  Test Batch_20250704_210857.json  Test Batch_20250704_211007.json  Test Batch_20250704_211008.json  Test Batch_20250704_211008.txt  Test Batch_20250704_232010.json  Test Batch_20250704_232104.json  Test Batch_20250704_232105.json  Test Batch_20250704_232500.json  Test Batch_20250704_232500.txt  Test Batch_20250704_232501.json  Test Batch_20250704_232546.json  batch_report_20250704_204832.txt
saved_datasets/: entrez_nucleotide_COIGene AND 600650SLEN_n20.fasta  teste.fasta
scripts/: clean_database.py  clean_database_force.py  debug_websocket.py  generate_docs.py  quick-clean.sh  test_websocket_monitor.py
src/: README.md  __init__.py  algorithm_executor.py  batch_executor.py  console_manager.py  export_csv.py  export_csv_batch.py  logging_utils.py  main.py  menu.py  report_utils.py  results_formatter.py  runner.py
src/core/: __init__.py
tests/: __init__.py  conftest.py  test_algorithm_executor.py  test_algorithm_runner.py  test_algoritmos.py  test_app.py  test_application_services.py  test_basic.py  test_batch.yaml  test_batch_algorithm_loading.py  test_batch_execution_api.py  test_batch_executor.py  test_batch_executor_basic.py  test_batch_reporter.py  test_cli_commands.py  test_cli_commands_simple.py  test_config_loader.py  test_dataset_factory.py  test_dataset_wizard.py  test_datasets.py  test_distancias.py  test_entrez_vcr.py  test_exporter.py  test_infrastructure_orchestration.py  test_integracao.py  test_interactive_menu.py  test_main.py  test_parallel_runner_new.py  test_resource_centralization.py  test_resource_monitor.py  test_results_formatter.py  test_utils.py  test_web_routes.py  test_websocket_monitor.py
utils/: config.py  distance.py  logging_utils.py  resource_limits_config.py  resource_monitor.py
(+411 files in other folders)
