[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cspbench"
version = "1.0.0"
description = "A comprehensive framework for benchmarking Closest String Problem algorithms with hexagonal architecture"
readme = "README.md"
authors = [
    {name = "Diego Grosmann", email = "diego.grosmann@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
keywords = ["bioinformatics", "closest-string-problem", "algorithms", "benchmarking", "optimization"]
dependencies = [
    "typer>=0.9.0",
    "PyYAML>=6.0",
    "biopython>=1.80",
    "numpy>=1.20.0",
    "optuna>=3.0.0",
    # Web dependencies
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.5",
    "jinja2>=3.0.0",
    "websockets>=11.0.0",
    "websockets>=15.0.0",
    # Database dependencies  
    "SQLAlchemy>=2.0.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "matplotlib>=3.6.0",
    "scikit-learn>=1.3.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "coverage[toml]>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "bandit>=1.7.0",
    "pip-audit>=2.6.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.23.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "coverage[toml]>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/diegogrosmann/CSPBench"
Repository = "https://github.com/diegogrosmann/CSPBench"
Issues = "https://github.com/diegogrosmann/CSPBench/issues"
Documentation = "https://diegogrosmann.github.io/CSPBench"
Changelog = "https://github.com/diegogrosmann/CSPBench/blob/main/CHANGELOG.md"

[project.scripts]
cspbench = "main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["cspbench*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
cspbench = ["config/*.yaml"]

# ===================================================================
# TOOL CONFIGURATIONS
# ===================================================================

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Diretórios a excluir
  \.git
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/**/*.py" = ["F401", "F811"]  # Allow unused imports and redefinitions in tests

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
known_first_party = ["cspbench"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov=algorithms",  # incluir algoritmos externos ao src
    "--cov-report=term-missing",
    "--cov-report=html",
]
# Definir markers custom
markers = [
    "integration: marca testes de integração mais pesados",
]
# Inclui também testes de plugins em algorithms/*/tests
testpaths = ["tests", "algorithms/*/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "Bio.*",
    "optuna.*",
    "yaml.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src", "algorithms"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.deptry]
per_rule_ignores = { DEP002 = ["python-multipart", "pytest-asyncio", "jinja2", "websockets"] }

[tool.bandit]
exclude_dirs = ["tests", "docs", "build", "dist"]
skips = ["B101", "B601"]  # Skip assert statements and shell=True (pode ajustar conforme necessário)


